--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "My Cool Extension",
+  "name": "Good News",
   "version": "0.1",
 
 
@@ -9,7 +9,7 @@
     "matches": [
       "https://news.google.com/news/*","http://news.google.com/news/*"
     ],
-    "js": ["content.js"]
+    "js": ["content.js","jQuery_3.2.1_compressed.js"]
   }
 ]
 }
